# cerive

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Kconfig  README.md  flake.nix
bsp/: lm3s6965.ld  startup.c  syscalls.c
cmake/: arm-none-eabi.cmake  cstructs.cmake  matrix.cmake
cmake/python/: pyproject.toml
cmake/python/src/cstructs/: asm.py  cli.py  expand.py  report.py
cmake/python/tests/: test_asm.py  test_expand.py  test_report.py
derive/: derive.h  derive_for.h  derive_hybrid.h  derive_xmacro.h  each.h  field.h  fmt.h  hash.h  new.h  ord.h  sum.h  union.h
include/cerive/: buf.h  cerive.h  each.h  field.h  hash.h  new.h  ord.h  union.h
src/: cerive.c
study/: study.c
tests/: test_compile_time.c  test_point.c  test_scalars.c  test_shapes.c
variants/cerive/: shapes.h  test_types.h
variants/derive/: point.h
variants/for/: shapes.h
variants/handwritten/: point.h  shapes.h
variants/hybrid/: point.h  shapes.h
variants/xmacro/: point.h
zephyr/: module.yml
